ft_containers-unit/logs.txt
In file included from ../stack_tests/push().cpp:1:
In file included from ../stack_tests/../system/system_methods.ipp:2:
In file included from ../stack_tests/../system/lib.hpp:30:
../stack_tests/../system/Alloc.hpp:55:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../stack_tests/../system/Alloc.hpp:58:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
../stack_tests/../system/Alloc.hpp:164:27: warning: variadic templates are a C++11 extension [-Wc++11-extensions]
template <class _Up, class... _Args>
                          ^
../stack_tests/../system/Alloc.hpp:167:34: warning: rvalue references are a C++11 extension [-Wc++11-extensions]
        construct(_Up* __p, _Args&&... __args)
                                 ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:3:10: error: expected "FILENAME" or <FILENAME>
#include STACK
         ^
../stack_tests/__service.ipp:9:2: error: no template named '_stack'; did you mean 'stack'?
        _stack<int> st1, st2, st3, st4;
        ^~~~~~
        stack
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:114:28: note: 'stack' declared here
class _LIBCPP_TEMPLATE_VIS stack
                           ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:10:2: error: no template named '_stack'; did you mean 'stack'?
        _stack<string> st5, st6, st7, st8, st9;
        ^~~~~~
        stack
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:114:28: note: 'stack' declared here
class _LIBCPP_TEMPLATE_VIS stack
                           ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:27:114: error: no template named '_stack'; did you mean 'stack'?
int run_stack_unit_test(std::string test_name, std::vector<int> (func1)(std::stack<T>), std::vector<int> (func2)(_stack<T>)) {
                                                                                                                 ^~~~~~
                                                                                                                 stack
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:114:28: note: 'stack' declared here
class _LIBCPP_TEMPLATE_VIS stack
                           ^
In file included from ../stack_tests/push().cpp:2:
../stack_tests/__service.ipp:35:2: error: no template named '_stack'; did you mean '::stack'?
        _stack<int> my_stack;
        ^~~~~~
        ::stack
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:114:28: note: '::stack' declared here
class _LIBCPP_TEMPLATE_VIS stack
                           ^
../stack_tests/push().cpp:16:28: error: no template named '_stack'; did you mean 'stack'?
std::vector<int> size_test(_stack<T> stk) {
                           ^~~~~~
                           stack
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:114:28: note: 'stack' declared here
class _LIBCPP_TEMPLATE_VIS stack
                           ^
../stack_tests/push().cpp:16:18: error: redefinition of 'size_test'
std::vector<int> size_test(_stack<T> stk) {
                 ^
../stack_tests/push().cpp:5:18: note: previous definition is here
std::vector<int> size_test(std::stack<T> stk) {
                 ^
../stack_tests/push().cpp:28:7: error: no matching function for call to 'run_stack_unit_test'
        exit(run_stack_unit_test<int>("push()", size_test, size_test));
             ^~~~~~~~~~~~~~~~~~~~~~~~
../stack_tests/__service.ipp:27:5: note: candidate function template not viable: no overload of 'size_test' matching 'std::vector<int> (*)(std::stack<int>)' for 2nd argument
int run_stack_unit_test(std::string test_name, std::vector<int> (func1)(std::stack<T>), std::vector<int> (func2)(_stack<T>)) {
    ^
4 warnings and 8 errors generated.
     ^~~~~~
        stack
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:114:28: note: 'stack' declared here
class _LIBCPP_TEMPLATE_VIS stack
                           ^
../stack_tests/constructor.cpp:38:14: error: no matching constructor for initialization of 'stack<int>'
        _stack<int> stack(deque);
                    ^     ~~~~~
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:134:5: note: candidate constructor not viable: no known conversion from 'vector<int>' to 'const std::stack<int>' for 1st argument
    stack(const stack& __q) : c(__q.c) {}
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:156:14: note: candidate constructor not viable: no known conversion from 'vector<int>' to 'const std::stack<int>::container_type' (aka 'const std::deque<int>') for 1st argument
    explicit stack(const container_type& __c) : c(__c) {}
             ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:160:18: note: candidate template ignored: substitution failure [with _Alloc = std::vector<int>]: no member named '_EnableIfImpl' in 'std::_MetaBase<false>'
        explicit stack(const _Alloc& __a,
                 ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:129:5: note: candidate constructor not viable: requires 0 arguments, but 1 was provided
    stack()
    ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:165:9: note: candidate constructor template not viable: requires at least 2 arguments, but 1 was provided
        stack(const container_type& __c, const _Alloc& __a,
        ^
/Library/Developer/CommandLineTools/SDKs/MacOSX.sdk/usr/include/c++/v1/stack:170:9: note: candidate constructor template not viable: requires at least 2 arguments, but 1 was provided
        stack(const stack& __s, const _Alloc& __a,
        ^
../stack_tests/constructor.cpp:39:13: error: expected ';' after expression
        _stack<int> stack2(stk);
                   ^
                   ;
../stack_tests/constructor.cpp:39:2: error: use of undeclared identifier '_stack'; did you mean 'stack'?
        _stack<int> stack2(stk);
        ^~~~~~
        stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:40:14: error: use of undeclared identifier 'stack3'; did you mean 'stack'?
        _stack<int> stack3;
                    ^~~~~~
                    stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:40:13: error: expected ';' after expression
        _stack<int> stack3;
                   ^
                   ;
../stack_tests/constructor.cpp:40:2: error: use of undeclared identifier '_stack'; did you mean 'stack'?
        _stack<int> stack3;
        ^~~~~~
        stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:41:2: error: use of undeclared identifier 'stack3'; did you mean 'stack'?
        stack3 = stack2;
        ^~~~~~
        stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:41:11: error: use of undeclared identifier 'stack2'; did you mean 'stack'?
        stack3 = stack2;
                 ^~~~~~
                 stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:47:9: error: use of undeclared identifier 'stack2'; did you mean 'stack'?
        while (stack2.size() > 0) {
               ^~~~~~
               stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
../stack_tests/constructor.cpp:48:15: error: use of undeclared identifier 'stack2'; did you mean 'stack'?
                v.push_back(stack2.top());
                            ^~~~~~
                            stack
../stack_tests/constructor.cpp:38:14: note: 'stack' declared here
        _stack<int> stack(deque);
                    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
4 warnings and 20 errors generated.
